[package]
name = "minixpd"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A websocket listener for experienced"
repository = "https://github.com/randomairborne/minixpd"
readme = "README.txt"
license = "MS-PL"
categories = ["games"]
keywords = ["discord-bot", "mee6"]

[dependencies]
twilight-gateway = { version = "0.15", features = ["rustls-native-roots", "twilight-http"], default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "tls", "postgres", "macros", "offline"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-util = { version = "0.15", features = ["builder"] }
twilight-interactions = "0.15"
twilight-validate = "0.15"
xpd-rank-card = "0.0.5"
twilight-model = "0.15"
twilight-http = "0.15"
parking_lot = "0.12"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
base64 = "0.21"
ahash = "0.8"
rand = "0.8"
mee6 = "0.1"
